# fake-news-detector

./: README.md  pyproject.toml
